--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -182,7 +182,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- //banner -->
 
 <!---News--->
-
+<!---   phân trang + post ----->
 <!---div class="flex-container">
   {% for post in post %}
     <div>
