--- a/student/templates/student/detailStudent.html
+++ b/student/templates/student/detailStudent.html
@@ -28,6 +28,6 @@
 {% endif %}
     <h5><label>Chú thích: {{student.note}}</label></h5>
     <form>
-    {{form.systemlevel}}
+    {{form.classid}}
     </form>
 {% endblock content %}
