--- a/student/templates/student/createStudent.html
+++ b/student/templates/student/createStudent.html
@@ -12,13 +12,10 @@
                     <p style="align-self: center;">Tên học viên: </p><p>{{ form.name }}</p>
                 </div>
                 <div class="row">
-                    <p>Ngày sinh: </p><p>{{ form.birtday }}</p>
+                    <p>Số điện thoại liên lạc: </p><p>{{ form.phone_number_1 }}</p>
                 </div>
                 <div class="row">
-                    <p>Địa chỉ: </p><p>{{ form.address }}</p>
-                </div>
-                <div class="row">
-                    <p>Số điện thoại liên lạc: </p><p>{{ form.phonenum1 }}</p>
+                    <p>Khu vực: </p><p>{{ form.learning_area }}</p>
                 </div>
             </div>      
             <input type="submit" value="Đăng kí"/>
