--- a/home/templates/pages/Success.html
+++ b/home/templates/pages/Success.html
@@ -1,14 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div style="align-items: center;background-color: gold;margin-top: 100px;">
-        <h1>Đăng kí thành công, nhân viên của chúng tôi sẽ sớm liên lạc với bạn</h1>
-    </div>
-</body>
+<html>
+    <head>
+        <title>
+            Excel file upload and processing : Django Example : ThePythonDjango.Com
+        </title>
+    </head>
+    <body style="margin-top: 30px;margin-left: 30px;" class="box">
+        <form action="." method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="file"
+                   title="Upload excel file"
+                   name="excel_file"
+                   style="border: 1px solid black; padding: 5px;"
+                   required="required">
+            <p>
+            <input type="submit"
+                   value="Upload"
+                   style="border: 1px solid green; padding:5px; border-radius: 2px; cursor: pointer;">
+        </form>
+
+        <p></p>
+        <hr>
+        
+    </body>
+    <Style>
+        @keyframes bgColorTransition {
+            to {
+            background-color: yellow;
+        }
+    }
+ 
+ .box {
+    background-color: red;
+    animation: bgColorTransition 5s linear infinite alternate;
+ }
+    </Style>
 </html>
