add upload file student/ book/ level

--- a/student/templates/student/upload.html
+++ b/student/templates/student/upload.html
@@ -10,9 +10,10 @@
                 {{form.as_p}}
                 <select name="model">
                     <option value="Student">Student</option>
-                    <option value="Class">Class</option>
-                    <option value="Teacher">Teacher</option>
-                    <option value="Level">Level</option>
+                    <option value="Book">Book</option>
+                    {% comment %} <option value="Teacher">Teacher</option> {% endcomment %}
+                    <option value="SystemLevel">SystemLevel</option>
+                    {% comment %} <option value="CambridgeLevel">Cambridge</option> {% endcomment %}
                 </select>
             </div>      
             <input type="submit" value="Đăng kí"/>
