Edit upload teacher

--- a/student/templates/student/upload.html
+++ b/student/templates/student/upload.html
@@ -11,7 +11,7 @@
                 <select name="model">
                     <option value="Student">Student</option>
                     <option value="Book">Book</option>
-                    {% comment %} <option value="Teacher">Teacher</option> {% endcomment %}
+                    <option value="Teacher">Teacher</option>
                     <option value="SystemLevel">SystemLevel</option>
                     {% comment %} <option value="CambridgeLevel">Cambridge</option> {% endcomment %}
                 </select>
